# mriqc-learn

./: .gitignore  .zenodo.json  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: pythonpackage.yml
docs/: about.rst
docs/notebooks/: Dimensionality Reduction on IQMs.ipynb  Example_IQMs_analysis.ipynb  Example_IQMs_analysis_dimensionality_reduction.ipynb  Example_IQMs_analysis_group_comparison.ipynb  MRIQC Web API.ipynb  MRIQC-workbook.ipynb  Tutorial.ipynb  Visualization.ipynb  finding_spikes.ipynb  statistical_analysis.ipynb
mriqc-learn/datasets/: abide.py
mriqc_learn/: __init__.py
mriqc_learn/data/: classifier.joblib  model_selection.yaml
mriqc_learn/datasets/: __init__.py  abide.py  abide.tsv  ds030.tsv  webapi.py
mriqc_learn/model_selection/: split.py
mriqc_learn/models/: preprocess.py  production.py
mriqc_learn/viz/: metrics.py  ratings.py
scripts/: train_model.py
