[metadata]
author = The NiPreps developers
author_email = nipreps@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Learning on MRIQC-generated image quality metrics (IQMs).
license = Apache-2.0
long_description = file:docs/about.rst
long_description_content_type = text/x-rst; charset=UTF-8
name = mriqc_learn
url = https://github.com/nipreps/mriqc-learn

[options]
python_requires = >=3.8
setup_requires =
    setuptools >= 45.0
    setuptools_scm >= 6.2
    setuptools_scm_git_archive
    toml
install_requires =
    pandas ~= 1.0
packages = find:
include_package_data = True
zip_safe = True

[options.exclude_package_data]
* = tests

[options.extras_require]
doc =
    furo ~= 2021.10.09
    pydot
    pydotplus
    sphinx
    sphinxcontrib-apidoc
    sphinxcontrib-napoleon
docs =
    %(doc)s
mem =
    psutil

test =
    codecov
    coverage
    pytest
    pytest-cov
    pytest-env
    pytest-xdist
tests =
    %(test)s

all =
    %(doc)s
    %(mem)s
    %(test)s

[options.package_data]
mriqc_learn =
    datasets/*.tsv

[flake8]
max-line-length = 99
doctests = False
ignore =
    W503
    E231
    E203
exclude =
    *build/
    docs/sphinxext/
    docs/tools/
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -vsx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE NUMBER
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore:cmp not installed:UserWarning
    ignore:This has not been fully tested:UserWarning
